--- a/.github/workflows/image-builder-golang.yml
+++ b/.github/workflows/image-builder-golang.yml
@@ -1,18 +1,18 @@
-name: builder_image_builder_pipeline
+name: builder_image_golang
 on:
   push:
     branches: [develop]
-    paths: [images/alpine-proto/**, .github/workflows/image-builder.yml]
+    paths: [images/builder-golang/**, .github/workflows/image-builder-golang.yml]
   pull_request:
-    paths: [images/alpine-proto/**, .github/workflows/image-builder.yml]
+    paths: [images/builder-golang/**, .github/workflows/image-builder-golang.yml]
 permissions:
   contents: read
   pull-requests: read
   packages: write
 env:
   GITHUB_REGISTRY: ghcr.io
-  BUILDER_IMAGE_NAME: dyrector-io/dyrectorio/alpine-proto
-  VERSION: 3.17-5
+  BUILDER_IMAGE_NAME: dyrector-io/dyrectorio/builder-images/golang
+  VERSION: 1
 jobs:
   build:
     runs-on: ubuntu-22.04
@@ -23,9 +23,13 @@ jobs:
         run: |
           sudo apt update
           sudo apt install zstd golang docker.io containerd runc
-          docker build -f ./images/alpine-proto/Dockerfile -t ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} .
+      - name: Docker build
+        run: |
+          docker build -f ./images/builder-golang/Dockerfile -t ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} .
+      - name: Docker export image
+        run: |
           docker save ${GITHUB_REGISTRY}/${BUILDER_IMAGE_NAME}:${VERSION} | gzip -f > builder.zstd
-      - name: artifact upload
+      - name: Artifact upload
         uses: actions/upload-artifact@v3
         with:
           name: builder
@@ -36,7 +40,7 @@ jobs:
     if: github.ref_name == 'develop'
     environment: Workflow - Protected
     steps:
-      - name: artifact download
+      - name: Artifact download
         uses: actions/download-artifact@v3
         with:
           name: builder
@@ -46,6 +50,8 @@ jobs:
           sudo apt update
           sudo apt install zstd golang docker.io containerd runc
           go install github.com/sigstore/cosign/v2/cmd/cosign@v2.0.2
+      - name: Load docker image
+        run: |
           zcat artifacts/builder.zstd | docker load
       - name: Login to GHCR
         uses: docker/login-action@v2
