--- a/.github/workflows/image-tester.yml
+++ b/.github/workflows/image-tester.yml
@@ -1,4 +1,4 @@
-name: tester_image_builder_pipeline
+name: tester_image_builder
 on:
   push:
     branches: [develop]
@@ -16,7 +16,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-5
+      image: ghcr.io/dyrector-io/dyrectorio/builder-images/protobuf:1
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -24,7 +24,7 @@ jobs:
         run: docker build -t ${GITHUB_REGISTRY}/${TESTER_IMAGE_NAME}:latest ./images/playwright
       - name: Docker save
         run: docker save ${GITHUB_REGISTRY}/${TESTER_IMAGE_NAME}:latest | gzip -f > tester.zstd
-      - name: artifact upload
+      - name: Artifact upload
         uses: actions/upload-artifact@v3
         with:
           name: tester
@@ -33,11 +33,11 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/alpine-proto:3.17-5
+      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:1
     if: github.ref_name == 'develop'
     environment: Workflow - Protected
     steps:
-      - name: artifact download
+      - name: Artifact download
         uses: actions/download-artifact@v3
         with:
           name: tester
