--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -9,6 +9,7 @@ permissions:
   contents: read
   pull-requests: read
   packages: read
+  id-token: write
 env:
   GITHUB_REGISTRY: ghcr.io
   DOCKERHUB_REGISTRY: docker.io/dyrectorio
@@ -829,7 +830,9 @@ jobs:
       - name: Login into Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       - name: Set kubectl context
         uses: azure/aks-set-context@v3
         with:
