--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,7 +14,11 @@ linters-settings:
   dupl:
     threshold: 100
   forbidigo:
-    exclude_godoc_examples: true
+    exclude_godoc_examples: false
+    forbid:
+      - ^print.*$
+      - 'fmt\.Print.*'
+      - panic*
   funlen:
     lines: 100
     statements: 50
