--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -831,15 +831,13 @@ jobs:
       - name: Login into Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: Set kubectl context
         uses: azure/aks-set-context@v3
         with:
           resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}'
           cluster-name: ${{ secrets.AZURE_CLUSTER_NAME }}
-          admin: 'true'
+          admin: 'false'
           use-kubelogin: 'true'
       - name: Rollout restart
         run: |
