--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -63,7 +63,7 @@
             "request": "launch",
             "buildFlags": "",
             "env": {
-                "KUBECONFIG": "${workspaceFolder}/golang/k3d.yaml"
+                "KUBECONFIG": "${workspaceFolder}/golang/k3d-auth.yaml"
             },
             "mode": "debug",
             "program": "${workspaceFolder}/golang/cmd/crane",
@@ -90,9 +90,9 @@
                 // main
                 // "--prefix", "dyo-stable",
                 // non-containarized develop
-                "--disable-crux", "--disable-crux-ui","--prefix", "dyo-latest",
+                // "--disable-crux", "--disable-crux-ui","--prefix", "dyo-latest",
                 // containerized develop
-                // "--imagetag",  "latest", "--prefix","dyo-latest",
+                "--image-tag",  "latest", "--prefix","dyo-latest",
                 "up"
             ],
             "program": "${workspaceFolder}/golang/cmd/dyo",
