fix(ci): fix the js and tsx source label rules

--- a/.github/config/labeler.yml
+++ b/.github/config/labeler.yml
@@ -18,4 +18,5 @@ lang:makefile: ['**/Makefile']
 lang:sql: ['**/*.prisma', '**/*.sql']
 lang:shell: ['**/*.sh', '**/*.sh.hbr', '**/*.ps1.hbr']
 lang:golang: ['**/*.go']
-lang:typescript: ['**/*.ts', '**/*.js']
+lang:typescript: ['**/*.ts', '**/*.tsx']
+lang:javascript: ['**/*.js', '**/*.jsx']
