fix(ci): fix the js and tsx source label rules

--- a/.github/config/labeler.yml
+++ b/.github/config/labeler.yml
@@ -5,7 +5,9 @@ source:agent:
   - golang/pkg/dagent/**
   - golang/cmd/crane/**
   - golang/cmd/dagent/**
-source:ci: [.github/workflows/**]
+source:ci:
+  - .github/workflows/**
+  - .github/config/**
 source:build:
   - '**/Makefile'
   - images/**
