--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -124,8 +124,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/$GOCACHE
-            ~/$GOPATH/pkg/mod
+            $GOPATH/cache
+            $GOPATH/pkg/mod
           key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-golang-
@@ -152,8 +152,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/$GOCACHE
-            ~/$GOPATH/pkg/mod
+            $GOPATH/cache
+            $GOPATH/pkg/mod
           key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-golang-
@@ -180,8 +180,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/$GOCACHE
-            ~/$GOPATH/pkg/mod
+            $GOPATH/cache
+            $GOPATH/pkg/mod
           key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-golang-
@@ -210,8 +210,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/$GOCACHE
-            ~/$GOPATH/pkg/mod
+            $GOPATH/cache
+            $GOPATH/pkg/mod
           key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-golang-
@@ -244,8 +244,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/$GOCACHE
-            ~/$GOPATH/pkg/mod
+            $GOPATH/cache
+            $GOPATH/pkg/mod
           key: ${{ runner.os }}-golang-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-golang-
@@ -254,11 +254,19 @@ jobs:
         run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - name: Load go mod
         run: go mod tidy
-      - name: Compile
+      - name: Compile CLI
+        run: make compile-cli
+      - name: Compile agents
+        run: make compile-agents
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Setup binfmt
+        run: make binfmt
+      - name: Build CLI & agents
         run: |
-          make compile-cli
           make build-cli
-          make compile-agents
           make build-agents
         env:
           VERSION: ${{ needs.gather_changes.outputs.version }}
@@ -557,13 +565,17 @@ jobs:
           path: ${{ env.CRUX_UI_WORKING_DIRECTORY }}/e2e_results
       - name: Teardown using cli
         run: docker run -v /var/run/docker.sock:/var/run/docker.sock ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }} --debug down
+  # separate build push action job is needed because of buildx limitations
   go_push:
     permissions:
       packages: write
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:1
-    needs: [go_build, e2e, gather_changes]
+      image: ghcr.io/dyrector-io/dyrectorio/builder-images/golang:1
+    defaults:
+      run:
+        working-directory: ${{ env.GOLANG_WORKING_DIRECTORY }}
+    needs: [e2e, gather_changes]
     if: |
       always() &&
       (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
@@ -576,26 +588,6 @@ jobs:
       needs.gather_changes.result == 'success'
     environment: Workflow - Protected
     steps:
-      - name: artifact download
-        uses: actions/download-artifact@v3
-        with:
-          name: crane
-          path: artifacts
-      - name: artifact download
-        uses: actions/download-artifact@v3
-        with:
-          name: dagent
-          path: artifacts
-      - name: artifact download
-        uses: actions/download-artifact@v3
-        with:
-          name: cli
-          path: artifacts
-      - name: Docker load
-        run: |
-          zstd -dc artifacts/dagent.zstd | docker load
-          zstd -dc artifacts/crane.zstd | docker load
-          zstd -dc artifacts/cli.zstd | docker load
       - name: Login to GHCR
         uses: docker/login-action@v2
         with:
@@ -608,6 +600,76 @@ jobs:
           registry: docker.io
           username: dyrectorio
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Checkout
+        uses: actions/checkout@v3
+      # fixes: fatal: unsafe repository
+      - name: Adding workspace
+        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+      - name: Load go mod
+        run: go mod tidy
+      - name: Compile CLI
+        run: make compile-cli
+      - name: Compile agents
+        run: make compile-agents
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Setup binfmt
+        run: make binfmt
+      - name: Compile
+        run: |
+          make GOOS="linux darwin windows" GOARCHS="amd64 arm64" compile-cli
+          make GOOS="linux" GOARCHS="amd64 arm64" compile-agents
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Setup binfmt
+        run: make binfmt
+      - name: Build images
+        run: |
+          make build-cli-push
+          make build-both-push-both
+        env:
+          VERSION: ${{ needs.gather_changes.outputs.version }}
+          image_version: ${{ needs.gather_changes.outputs.tag }}
+  go_sign:
+    permissions:
+      packages: write
+    runs-on: ubuntu-22.04
+    container:
+      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:1
+    needs: [gather_changes, go_push]
+    if: |
+      always() &&
+      (github.ref_name == 'develop' || github.ref_name == 'main' || github.ref_type == 'tag') &&
+      needs.e2e.result == 'success' &&
+      needs.go_build.result == 'success' &&
+      (needs.crux_build.result == 'success' || needs.crux_build.result == 'skipped') &&
+      (needs.crux-ui_build.result == 'success' || needs.crux-ui_build.result == 'skipped') &&
+      (needs.kratos_build.result == 'success' || needs.kratos_build.result == 'skipped') &&
+      needs.conventional_commits.result == 'success' &&
+      needs.gather_changes.result == 'success' && needs.go_push.result == 'success'
+    environment: Workflow - Protected
+    steps:
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_PAT }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: docker.io
+          username: dyrectorio
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Pull images to retag & sign
+        run: |
+          docker pull ${GITHUB_REGISTRY}/${CRANE_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }}
+          docker pull ${GITHUB_REGISTRY}/${DAGENT_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }}
+          docker pull ${GITHUB_REGISTRY}/${CLI_IMAGE_NAME}:${{ needs.gather_changes.outputs.tag }}
       - name: Write signing key to disk
         run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
       - name: Docker tag
