--- a/.github/workflows/staging-deploy.yaml
+++ b/.github/workflows/staging-deploy.yaml
@@ -1,22 +1,23 @@
 name: deploy
-on: push
-  # workflow_run:
-  #   workflows:
-  #     - "product_builder_pipeline"
-  #   branches:
-  #     - "develop"
-  #   types:
-  #     - completed
+on:
+  workflow_run:
+    workflows:
+      - "product_builder_pipeline"
+    branches:
+      - "develop"
+    types:
+      - completed
 permissions:
   contents: read
   pull-requests: read
   actions: read
 jobs:
- crux_deploy:
+  restart_deployments:
     runs-on: ubuntu-22.04
     container:
       image: bitnami/kubectl:1.26
     steps:
       - name: Rollout restart
         run: |
-          kubectl --token=${{ secrets.AZURE_KUBE_TOKEN }} -n dyo-staging rollout restart crux-api
+          echo "${{secrets.AKS_STAGING_CICD_KUBECONFIG}}" > /tmp/kubeconfig
+          kubectl --kubeconfig=/tmp/kubeconfig -n dyo-staging rollout restart deployment crux-api crux-kratos crux-ui
