--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -613,20 +613,14 @@ jobs:
         run: make compile-agents
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+        with:
+          platforms: linux/arm64, linux/amd64
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Setup binfmt
-        run: make binfmt
       - name: Compile
         run: |
           make GOOS="linux darwin windows" GOARCHS="amd64 arm64" compile-cli
           make GOOS="linux" GOARCHS="amd64 arm64" compile-agents
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Setup binfmt
-        run: make binfmt
       - name: Build images
         run: |
           make build-cli-push
