fix: add crane to signer image and add additional cache restore

--- a/images/signer/Dockerfile
+++ b/images/signer/Dockerfile
@@ -4,5 +4,5 @@ SHELL ["/bin/ash","-c"]
 WORKDIR /usr/work
 LABEL org.opencontainers.image.source="https://github.com/dyrector-io/dyrectorio/tree/develop/images/signer"
 
-RUN apk add docker zstd jq cosign
+RUN apk add docker zstd jq cosign crane
 
