--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -452,7 +452,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: gather_changes
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:1
+      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
     defaults:
       run:
         working-directory: ${{ env.KRATOS_WORKING_DIRECTORY }}
@@ -645,6 +645,11 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Golang caches
+        uses: actions/cache/restore@v3
+        with:
+          path: /go
+          key: ${{ runner.os }}-golang-${{ hashFiles('go.sum') }}
       # fixes: fatal: unsafe repository
       - name: Adding workspace
         run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
@@ -677,7 +682,7 @@ jobs:
       packages: write
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:1
+      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
     needs: [gather_changes, go_push]
     if: |
       always() &&
@@ -703,8 +708,6 @@ jobs:
           registry: docker.io
           username: dyrectorio
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Setup crane
-        uses: imjasonh/setup-crane@v0.1
       - name: Write signing key to disk
         run: echo "${{ secrets.COSIGN_PRIVATE_KEY }}" > cosign.key
       - name: Add DockerHub tag
@@ -736,7 +739,7 @@ jobs:
       packages: write
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:1
+      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
     needs: [crux_build, e2e, gather_changes]
     if: |
       always() &&
@@ -794,7 +797,7 @@ jobs:
       packages: write
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:1
+      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
     needs: [crux-ui_build, e2e, gather_changes]
     if: |
       always() &&
@@ -852,7 +855,7 @@ jobs:
       packages: write
     runs-on: ubuntu-22.04
     container:
-      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:1
+      image: ghcr.io/dyrector-io/dyrectorio/builder-images/signer:2
     needs: [kratos_build, e2e, gather_changes]
     if: |
       always() &&
